# memento

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
memento/: __init__.py  application.py  backend.py  contact.py  image.py  main.py  models.py  state.py
memento/widgets/: __init__.py  contact.py  createdb.py  login.py  roster.py
memento/widgets/contact/: add.py  edit.py
tests/: conftest.py  test_backend.py  test_events.py  test_login.py  test_profile_picture.py  test_state.py
