[metadata]
name = memento-app
author = WiseOldG33k
author-email = wiseoldg33k@gmail.com
summary =
description-file = README.md
description-content-type = text/x-markdown; charset=UTF-8
home-page = https://github.com/wiseoldg33k
license = MIT
keywords =
    mobile
    kivy
    contact

[files]
packages =
    memento

[entry_points]
console_scripts =
    mementoapp = memento.main:main
